Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 # REQUIRED CONFIG
-BOT_TOKEN=
-OWNER_ID=
-DRIVE_FOLDER_ID=
+BOT_TOKEN=5985104751:AAEVvg_0fkXttDMds8kz1bja6ZDnXWEfgJE
+OWNER_ID=1292898087
+DRIVE_FOLDER_ID=1Q3MWvra5APb3AwI9oCZruQezSex3cqN6
 # OPTIONAL CONFIG
 AUTHORIZED_USERS=
 DATABASE_URL=
-IS_TEAM_DRIVE=
+IS_TEAM_DRIVE=True
 USE_SERVICE_ACCOUNTS=
 DOWNLOAD_DIR=
 STATUS_UPDATE_INTERVAL=
